calmat_ng/static/css/style.css
/* ... */
.itw_list {
    font-family: "ff-meta-serif-web-pro", serif;
    color: #231f20;
    font-size: 18px;
    font-weight: 300;
    letter-spacing: 1px;
}

.itw_links {
    padding-left: 18px;
}

itw_list{
    display: inline;
}

div.itw_links a:link,
div.itw_links a:visited{
    color:#000;
}

.partner_img {
    float: left;
    /*width: auto;*/
    /*height: 58px;*/
    /*padding: 0 10px;*/
    height: 20px;
    /*margin: 0px 10px 10px 0px;*/
}

#news_partners_basics{
    display: block;
}

#news_partners{
    margin-right: 2%;
}

#newsletter{
        max-width: 430px;
    }

.newsletter{
    background-image: url(../img/lines.png);
	background-position: center;
    background-size: cover;
}

#more_partners_link{
    background-image: url(../img/lines.png);
	background-position: center;
    background-size: cover;
}

.partners {
    /*margin: 0 auto 2em;*/
    /*max-width: 430px;*/
}

.partner_logos {
    display: inline-block;
    margin-left: auto;
    margin-right: auto;
}

#partners_text {
    font-family: "ff-meta-serif-web-pro", serif;
}

#more_partners_link{
    height: 58px;
    width: 98px;
    font-size: .8em;
    background-color: #01b4c6;
    color: #ffffff;
    float: right;
    padding: 4px 10px;
}

.thebasics {
    max-width: 320px;
    margin: 0 auto;
}

.basics_title {
    font-family: "ff-meta-serif-web-pro", serif;
	font-weight: 700;
    font-size: 18px;
    background-color: #000;
    color: #fff;
    padding: .2em 1em;
}

.basics_text{
    font-family: GearedSlab;
    color:#ffffff;
    font-weight: 400;
    vertical-align: middle;
    text-align: center;
    text-shadow: 0px 0px 12.75px rgba(0, 0, 0, 0.3);
}

.basics_img{
    width: 100%;
}

#basics_text1 {
    position: absolute;
    top: 25%;
    margin: 0 25%;
    color: white;
}

#basics_text2 {
    position: absolute;
    top: 25%;
    margin: 0 25%;
    color: white;
}

#basics_text3 {
    position: absolute;
    top: 25%;
    margin: 0 25%;
    color: white;
}

#basics_text4 {
    position: absolute;
    top: 25%;
    margin: 0 25%;
    color: white;
}

#basic1{
    position: relative;
    height: 102px;
    width: auto;
}

#basic2{
    position: relative;
    height: 102px;
    width: auto;
}

#basic3{
    position: relative;
    height: 102px;
    width: auto;
}

#basic4{
    position: relative;
    height: 102px;
    width: auto;
}

#upper_articles {
    display: inline-block;
}

#education_title, #finance_title, #health_title, #environment_title {
    font-family: "ff-meta-serif-web-pro", serif;
    font-size: 18px;
    font-weight: 700;
    background-color: #000000;
    color: #ffffff;
    padding: .5em .5em;
    max-width: 609px;
}

#education_box, #finance_box, #health_box, #environment_box {
    margin-bottom: 18px;
}

.mid_section_links {
    margin-top: 108px;
}

.mid_section_img {
    height: auto;
}

::-webkit-input-placeholder { font-size: 1em !important; }
::-moz-placeholder { font-size: 1em !important; } /* firefox 19+ */
:-ms-input-placeholder { font-size: 1em !important; } /* ie */
input:-moz-placeholder { font-size: 1em !important; }

@media screen and (max-width: 3600px){
    .content {
        width: 63.65%;
    }

    #upper_articles {
        float: left;
        overflow: hidden;
        width: 66.6%;
    }

    #news_partners_basics {
        float: right;
        overflow: hidden;
        margin: 18px 0;
        width: 33.3%;
    }

    .sub_articles {
        display: inline-block;
        width: 100%;
        overflow: hidden;
        float: left;
    }

    #second_article {
        width: 48%;
        float: left;
        margin-top: 0;
        margin-bottom: 18px;
        height: 296px;
    }

    #third_article {
        width: 48%;
        float: right;
        margin-top: 0;
        margin-bottom: 18px;
        height: 296px;
    }

    #second_article h2 {
        font-size: 1em;
        font-weight: 600;
        line-height: 1.4em;
    }

    #third_article h2 {
        font-size: 1em;
        font-weight: 600;
        line-height: 1.4em;
    }

    #main_article {
        width: 100%;
        float: left;
        margin: 36px 36px 36px 0;
    }

    #main_article_text {
        width: 70%;
        margin-right: 30px;
    }

    #second_article_text {
        padding: .4em 1em;
        width: 70%;
        position: relative;
        margin-left: auto;
        margin-right: auto;
        top: -45%;
    }

    #third_article_text {
        padding: .4em 1em;
        width: 70%;
        position: relative;
        margin-left: auto;
        margin-right: auto;
        top: -45%;
    }
	
	.secondary_article_imgs {
		height: 230px;
	}

    #itw_mobile{
        display: none;
    }

    #news_partners{
        width: 88%;
        overflow: hidden;
        margin: 0 0 0 auto;
    }

    .thebasics {
        max-width: 88%;
        margin: 15px 0 0 auto;
    }

    .partner_logos {
        width: 100%;
        display: flex;
        justify-content: space-between;
    }

    #partners_text {
        text-align: center;
    }

    .partner_img {
        padding: 4px 24px;
    }

     #education_box, #finance_box, #health_box {
        width: 24%;
        margin-right: 1.33%;
        float: left;
    }

    #environment_box {
        width: 24%;
        margin-right: 0;
        float: left;
    }

    .mid_section_img {
        height: 187.62px;
    }
}

@media screen and (max-width: 1230px) {
    .content {
        width: 722px;
    }
}
/* ... */

